Fixing product images on mobile.

--- a/less/pages/buyers-guide/item.less
+++ b/less/pages/buyers-guide/item.less
@@ -87,16 +87,17 @@
     overflow: hidden;
     .main-product-image-container {
       width: 505px;
-      height: 500px;
+      max-width: 100%;
       display: flex;
       margin: 20px 0;
     }
     img {
       max-width: 100%;
-      max-height: 100%;
+      max-height: 500px;
       margin: auto;
       display: block;
     }
+
     .clear {
       overflow: hidden;
     }
